--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-	"name": "jjjj",
+	"name": "jjjj-cli",
 	"version": "1.0.0",
 	"main": "index.js",
 	"type": "module",
 	"bin": {
-		"j": "./bin/dev.js"
+		"j": "./bin/run.js"
+	},
+	"engines": {
+		"node": ">=18.0.0"
 	},
 	"scripts": {
-		"postinstall": "node install.js",
+		"build": "npx tsc --pretty",
+		"prepublishOnly": "npm run build",
+		"dev:install": "node install.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"codegen": "graphql-codegen --config .graphqlrc.ts"
 	},
@@ -76,7 +81,7 @@
 		"dirname": "j",
 		"topicSeparator": " ",
 		"hooks": {
-			"command_not_found": "./src/lib/hooks/command_not_found/jj-passthrough"
+			"command_not_found": "./dist/lib/hooks/command_not_found/jj-passthrough"
 		}
 	}
 }
