--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-	"recommendations": ["graphql.vscode-graphql", "graphql.vscode-graphql-syntax"]
+  "recommendations": ["graphql.vscode-graphql", "graphql.vscode-graphql-syntax", "biomejs.biome"]
 }
