--- a/package.json
+++ b/package.json
@@ -1,88 +1,89 @@
 {
-	"name": "jjjj-cli",
-	"version": "1.0.7",
-	"main": "index.js",
-	"type": "module",
-	"bin": {
-		"j": "./bin/run.js"
-	},
-	"engines": {
-		"node": ">=18.0.0"
-	},
-	"scripts": {
-		"build": "npx tsc --pretty",
-		"prepublishOnly": "npm run build",
-		"dev:install": "node install.js",
-		"dev:uninstall": "rm ~/.local/bin/j",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"codegen": "graphql-codegen --config .graphqlrc.ts"
-	},
-	"author": "Daniel Acuna",
-	"license": "ISC",
-	"description": "A Stacked PR tool sitting atop Jujutsu VCS with GitHub integration",
-	"keywords": [
-		"jujutsu",
-		"jj",
-		"stacked-prs",
-		"github",
-		"git",
-		"vcs",
-		"version-control"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/dacuha-ic/jjjj.git"
-	},
-	"homepage": "https://github.com/dacuha-ic/jjjj#readme",
-	"bugs": {
-		"url": "https://github.com/dacuha-ic/jjjj/issues"
-	},
-	"dependencies": {
-		"@inquirer/prompts": "^7.2.1",
-		"@oclif/core": "^4.3.2",
-		"@urql/core": "^5.1.0",
-		"find-up": "^7.0.0",
-		"graphql": "^16.10.0",
-		"ink": "^5.1.0",
-		"ink-link": "^4.1.0",
-		"ink-spinner": "^5.0.0",
-		"lodash": "^4.17.21",
-		"octokit": "^4.0.2",
-		"openai": "^6.15.0",
-		"p-map": "^7.0.3",
-		"p-map-series": "^3.0.0",
-		"p-props": "^6.0.0",
-		"p-retry": "^6.2.1",
-		"p-wait-for": "^5.0.2",
-		"pino": "^9.6.0",
-		"react": "^18.3.1",
-		"tsx": "^4.19.2",
-		"yargs": "^17.7.2",
-		"zx": "^8.2.4"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@graphql-codegen/cli": "5.0.5",
-		"@graphql-codegen/client-preset": "^4.6.2",
-		"@graphql-codegen/typescript": "4.1.3",
-		"@graphql-codegen/typescript-document-nodes": "4.0.13",
-		"@graphql-codegen/typescript-resolvers": "4.4.2",
-		"@octokit/graphql-schema": "^15.25.0",
-		"@types/lodash": "^4.17.13",
-		"@types/node": "^18.19.111",
-		"@types/react": "^19.0.2",
-		"@types/yargs": "^17.0.33",
-		"ts-node": "^10.9.2",
-		"tsdown": "^0.12.3",
-		"typescript": "^5.7.3"
-	},
-	"oclif": {
-		"bin": "j",
-		"commands": "./dist/commands",
-		"dirname": "j",
-		"topicSeparator": " ",
-		"hooks": {
-			"command_not_found": "./dist/lib/hooks/command_not_found/jj-passthrough"
-		}
-	}
+  "name": "jjjj-cli",
+  "version": "1.0.7",
+  "description": "A Stacked PR tool sitting atop Jujutsu VCS with GitHub integration",
+  "keywords": [
+    "git",
+    "github",
+    "jj",
+    "jujutsu",
+    "stacked-prs",
+    "vcs",
+    "version-control"
+  ],
+  "homepage": "https://github.com/dacuha-ic/jjjj#readme",
+  "bugs": {
+    "url": "https://github.com/dacuha-ic/jjjj/issues"
+  },
+  "license": "ISC",
+  "author": "Daniel Acuna",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dacuha-ic/jjjj.git"
+  },
+  "bin": {
+    "j": "./bin/run.js"
+  },
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "build": "npx tsc --pretty",
+    "prepublishOnly": "npm run build",
+    "dev:install": "node install.js",
+    "dev:uninstall": "rm ~/.local/bin/j",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "codegen": "graphql-codegen --config .graphqlrc.ts"
+  },
+  "dependencies": {
+    "@inquirer/prompts": "^7.2.1",
+    "@oclif/core": "^4.3.2",
+    "@urql/core": "^5.1.0",
+    "find-up": "^7.0.0",
+    "graphql": "^16.10.0",
+    "ink": "^5.1.0",
+    "ink-link": "^4.1.0",
+    "ink-spinner": "^5.0.0",
+    "lodash": "^4.17.21",
+    "octokit": "^4.0.2",
+    "openai": "^6.15.0",
+    "p-map": "^7.0.3",
+    "p-map-series": "^3.0.0",
+    "p-props": "^6.0.0",
+    "p-retry": "^6.2.1",
+    "p-wait-for": "^5.0.2",
+    "pino": "^9.6.0",
+    "react": "^18.3.1",
+    "tsx": "^4.19.2",
+    "yargs": "^17.7.2",
+    "zx": "^8.2.4"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "5.0.5",
+    "@graphql-codegen/client-preset": "^4.6.2",
+    "@graphql-codegen/typescript": "4.1.3",
+    "@graphql-codegen/typescript-document-nodes": "4.0.13",
+    "@graphql-codegen/typescript-resolvers": "4.4.2",
+    "@octokit/graphql-schema": "^15.25.0",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^18.19.111",
+    "@types/react": "^19.0.2",
+    "@types/yargs": "^17.0.33",
+    "oxfmt": "^0.20.0",
+    "oxlint": "^1.35.0",
+    "ts-node": "^10.9.2",
+    "tsdown": "^0.12.3",
+    "typescript": "^5.7.3"
+  },
+  "oclif": {
+    "bin": "j",
+    "commands": "./dist/commands",
+    "dirname": "j",
+    "hooks": {
+      "command_not_found": "./dist/lib/hooks/command_not_found/jj-passthrough"
+    },
+    "topicSeparator": " "
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
